syntax = "proto3";

option csharp_namespace = "AuthServiceProvider.Protos";

package auth;

service RoleService {
  rpc PromoteToManager (PromotionRequest) returns (PromotionResponse);
}

message PromotionRequest {
  string email = 1;
  string role =2;
}

message PromotionResponse {
  bool success = 1;
  string message = 2;
}